--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="html/about.html">About Us</a></li>
-                <li><a href="html/services.html">Services</a></li>
+                <li><a href="html/shop.html">Shop</a></li>
                 <li><a href="html/news.html">News</a></li>
                 <li><a href="html/contact.html">Contact</a></li>
             </ul>
